--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/virajsaranga/My-3d-portfolio-v2",
+"homepage": "https://virajsaranga.github.io/My-3d-portfolio-v2",
   "name": "portfolio_website_viraj",
   "version": "0.1.0",
   "private": true,
